--- a/public/biblio/bibliography.bib
+++ b/public/biblio/bibliography.bib
@@ -35,3 +35,12 @@
   url={https://opentelemetry.io/},
   publisher={OpenTelemetry}
 }
+
+
+@article{acid,
+  title={Propriétés ACID},
+  author={Wikipedia},
+  url={https://fr.wikipedia.org/wiki/Propri%C3%A9t%C3%A9s_ACID},
+  publisher={Wikipedia}
+}
+
