--- a/public/biblio/bibliography.bib
+++ b/public/biblio/bibliography.bib
@@ -44,3 +44,10 @@
   publisher={Wikipedia}
 }
 
+
+@article{netflix-api-gateway,
+  title={Utilisation de l'API Gateway chez Netflix},
+  author={Netflix},
+  url={https://netflixtechblog.com/optimizing-the-netflix-api-5c9ac715cf19},
+  publisher={Netflix Tech Blog}
+}
