fix: typos & improvements

--- a/public/biblio/bibliography.bib
+++ b/public/biblio/bibliography.bib
@@ -51,3 +51,22 @@
   url={https://netflixtechblog.com/optimizing-the-netflix-api-5c9ac715cf19},
   publisher={Netflix Tech Blog}
 }
+
+@article{loose-coupling-wikipedia,
+  title={Couplage},
+  author={Wikipedia},
+  url={https://fr.wikipedia.org/wiki/Couplage_(informatique)},
+  publisher={Wikipedia}
+}
+@article{circuit-breaker-pattern,
+  title={Circuit Breaker},
+  author={Wikipedia},
+  url={https://en.wikipedia.org/wiki/Circuit_breaker_design_pattern},
+  publisher={Wikipedia}
+}
+@article{bounded-context,
+  title={Bounded Context},
+  author={Martin Fowler},
+  url={https://martinfowler.com/bliki/BoundedContext.html},
+  publisher={Martin Fowler}
+}
