--- a/public/biblio/bibliography.bib
+++ b/public/biblio/bibliography.bib
@@ -70,3 +70,11 @@
   url={https://martinfowler.com/bliki/BoundedContext.html},
   publisher={Martin Fowler}
 }
+
+@article{rfc-7519,
+  title={RFC 7519},
+  author={IETF},
+  url={https://datatracker.ietf.org/doc/html/rfc7519},
+  publisher={IETF}
+}
+
