--- a/public/biblio/bibliography.bib
+++ b/public/biblio/bibliography.bib
@@ -78,3 +78,10 @@
   publisher={IETF}
 }
 
+@article{zero-trust-architecture,
+  title={Zero Trust Architecture},
+  author={Microsoft},
+  url={https://www.microsoft.com/fr-fr/security/business/security-101/what-is-zero-trust-architecture},
+  publisher={Microsoft}
+}
+
